# puya-sol

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  DEBT.md  README.md  first_task_report.md  puya-possible-bug.md  puya_backend_errors.md  puyabug-biguint-zero-fold.md  puyabug.md  refactor-plan-visitor.md  second_task_report.md
WIP/examples/example2/: package-lock.json
WIP/examples/example3/: package-lock.json
WIP/examples/openzeppelin/: package.json
WIP/examples/solady/: compile_all.sh  compile_results.md
WIP/examples/uniswap-v2/: uniswapv2.md
examples/aave-v4/contracts/: AaveOracle.sol  AssetInterestRateStrategy.sol  AssetLogic.sol  ConfigPermissionsMap.sol  ConfigPermissionsMapWrapper.sol  EIP712Hash_PM.sol  HubConfigurator.sol  IAaveOracle.sol  IIntentConsumer.sol  INativeTokenGateway.sol  INativeWrapper.sol  ISignatureGateway.sol  ISpoke.sol  ISpokeBase.sol  ISpokeConfigurator.sol  ITreasurySpoke.sol  IntentConsumer.sol  LiquidationLogic.sol  NativeTokenGateway.sol  NoncesKeyed.sol  Rescuable.sol  ReserveFlagsMap.sol  RolesWrapper.sol  SignatureGateway.sol  Spoke.sol  SpokeConfigurator.sol  SpokeUtils.sol  SpokeUtilsWrapper.sol  TokenizationSpoke.sol  TreasurySpoke.sol  UserPositionDebt.sol
examples/aave-v4/test/: conftest.py  test_access_manager.py  test_asset_interest_rate.py  test_config_permissions.py  test_config_position_manager.py  test_math_utils.py  test_nonces_keyed.py  test_percentage_math.py  test_position_status_map.py  test_shares_math.py  test_signature_gateway.py  test_treasury_spoke.py  test_unit_price_feed.py  test_wad_ray_math.py  test_weth9.py
examples/compound-timelock/contracts/: Timelock.sol
examples/ctf-exchange/: compile_all.sh  compile_results.txt
examples/ctf-exchange-v2/: ADAPTATIONS.md  compile_all.sh  split.json
examples/ctf-exchange-v2/artifacts/: NegRiskAdapter.json
examples/ctf-exchange-v2/delegate/: build.sh  ctf_mock.py  depth_probe.py  lonely_chunk.py  lonely_chunk.teal  lonely_chunk.teal.template  stitch.py
examples/ctf-exchange-v2/snapshots/: GasSnapshotsNegRiskCtfCollateralAdapter.json
examples/ctf-exchange-v2/test/: conftest.py  test_admin.py  test_ctfexchange.py  test_delegate_plumbing.py  test_ecdsa_recover.py  test_erc1271_signature.py  test_match_orders.py  test_preapproved.py  test_smoke.py
examples/ctf-exchange/test/: conftest.py  test_calculator_helper.py  test_ctfexchange.py  test_erc20.py  test_split_ctfexchange.py
examples/dapphub-dsguard/test/: conftest.py
examples/dapphub-dstoken/contracts/: DSToken.sol
examples/example2/: package.json
examples/example3/: package.json
examples/example3/test/: Airdrop.test.ts
examples/example4/contracts/: MyToken.sol
examples/frax/contracts/: UniswapPairOracle.sol
examples/frax/test/: conftest.py
examples/gnosis-safe/contracts/: Executor.sol  FallbackManager.sol  GuardManager.sol  IModuleManager.sol  NativeCurrencyPaymentFallback.sol  SafeL2.sol  SelfAuthorized.sol  StorageAccessible.sol
examples/honk-rust/contracts/: SimpleHonkVerifier.sol
examples/honk-rust/test/: conftest.py  test_simple_honk.py
examples/honk/test/: conftest.py  test_honk_deploy.py
examples/morpho-blue/test/: conftest.py  test_morpho.py
examples/multisig/test/: test_multisig.py
examples/openzeppelin/: package-lock.json
examples/openzeppelin/contracts/: AccessControl.sol  AccessList.sol  Allowance.sol  Allowlist.sol  AssetTracker.sol  Auction2.sol  BadgeSystem.sol  BitMaps.sol  Certificate.sol  CertificateIssuer.sol  Checkpoints.sol  Coupon.sol  CreditScore.sol  Crowdfunding.sol  Delegation.sol  DocumentStore.sol  DoubleEndedQueue.sol  ECDSA.sol  ERC1155.sol  ERC20Burnable.sol  ERC20Pausable.sol  ERC20Permit.sol  ERC20Snapshot.sol  ERC20Wrapper.sol  ERC2981.sol  ERC4626.sol  ERC721Burnable.sol  ERC721Enumerable.sol  ERC721Holder.sol  ERC721Royalty.sol  ERC721URIStorage.sol  EnergyMeter.sol  EnumerableSet.sol  Escrow3Party.sol  EscrowMultiParty.sol  EventTicketing.sol  Exchange.sol  FlashLoan.sol  Fundraiser.sol  Hashes.sol  (+40 more)
examples/openzeppelin/test/: test_access_log.py  test_allowlist.py  test_asset_tracker.py  test_auction.py  test_audit_trail.py  (+66 more)
scripts/: optimize_poseidon.py
src/: Logger.cpp  Logger.h  main.cpp
src/awst/: Node.cpp  Node.h  SourceLocation.h  Termination.cpp  Termination.h  WType.cpp  WType.h
src/builder/: AWSTBuilder.cpp  AWSTBuilder.h  AssemblyTranslator.cpp  AssemblyTranslator.h  ContractBuilder.cpp  ContractBuilder.h  ContractTranslator.cpp  ContractTranslator.h  ExpressionBuilder.cpp  ExpressionBuilder.h  ExpressionTranslator.cpp  ExpressionTranslator.h  ExpressionUtils.h  FunctionMaps.h  IntrinsicMapper.cpp  IntrinsicMapper.h  StatementTranslator.cpp  StatementTranslator.h  StorageMapper.cpp  StorageMapper.h  SubroutineReachability.cpp  SubroutineReachability.h  TypeMapper.cpp  TypeMapper.h  VarNaming.h
src/json/: AWSTSerializer.cpp  AWSTSerializer.h  Base85.cpp  Base85.h  OptionsWriter.cpp  OptionsWriter.h
src/runner/: PuyaRunner.cpp  PuyaRunner.h
src/splitter/: CallGraphAnalyzer.cpp  CallGraphAnalyzer.h  ConstantExternalizer.cpp  ConstantExternalizer.h  ContractSplitter.cpp  ContractSplitter.h  FunctionInliner.cpp  FunctionInliner.h  FunctionInlinerTransforms.cpp  FunctionSplitter.cpp  FunctionSplitter.h  SimpleSplitter.cpp  SimpleSplitter.h  SizeEstimator.cpp  SizeEstimator.h
tests/: conftest.py
tests/solidity-semantic-tests/: CURRENT.md  REPORT.md  analyze_backend_errors.py  analyze_errors.py  analyze_invalid_value.py  compile_baseline.py  conftest.py  fetch_tests.py  full_report.py  non_passing.txt  parser.py  report.json  report.md  results.txt  results_final.txt  results_final2.txt  results_new.txt  results_new2.txt  results_v10.txt  results_v100.txt  results_v101.txt  results_v102.txt  results_v103.txt  results_v104.txt  results_v105.txt  results_v106.txt  results_v107.txt  results_v108.txt  results_v109.txt  results_v11.txt  results_v110.txt  results_v111.txt  results_v112.txt  results_v113.txt  results_v114.txt  results_v115.txt  results_v116.txt  results_v117.txt  results_v118.txt  results_v119.txt  (+147 more)
(+1006 files in other folders)
